// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`SessionList renders a list of sessions 1`] = `
"<div>
  <nav data-testid="session-list" class="flex flex-col overflow-y-auto">
    <button type="button" class="border-l-2 px-3 py-2 text-left font-nav text-xs uppercase tracking-widest transition-colors cursor-pointer border-transparent text-cream/60 hover:bg-cream/5 hover:text-cream">
      The Ultimate Hamburger
    </button>
    <button type="button" class="border-l-2 px-3 py-2 text-left font-nav text-xs uppercase tracking-widest transition-colors cursor-pointer border-transparent text-cream/60 hover:bg-cream/5 hover:text-cream">
      Skull Face's Objective
    </button>
    <button type="button" class="border-l-2 px-3 py-2 text-left font-nav text-xs uppercase tracking-widest transition-colors cursor-pointer border-transparent text-cream/60 hover:bg-cream/5 hover:text-cream">
      Code Talker and His Research
    </button>
  </nav>
</div>"
`;

exports[`SessionList renders with a selected session 1`] = `
"<div>
  <nav data-testid="session-list" class="flex flex-col overflow-y-auto">
    <button type="button" class="border-l-2 px-3 py-2 text-left font-nav text-xs uppercase tracking-widest transition-colors cursor-pointer border-transparent text-cream/60 hover:bg-cream/5 hover:text-cream">
      The Ultimate Hamburger
    </button>
    <button type="button" class="border-l-2 px-3 py-2 text-left font-nav text-xs uppercase tracking-widest transition-colors cursor-pointer border-orange bg-orange/5 text-orange">
      Skull Face's Objective
    </button>
    <button type="button" class="border-l-2 px-3 py-2 text-left font-nav text-xs uppercase tracking-widest transition-colors cursor-pointer border-transparent text-cream/60 hover:bg-cream/5 hover:text-cream">
      Code Talker and His Research
    </button>
  </nav>
</div>"
`;

exports[`SessionList renders empty state 1`] = `
"<div>
  <nav data-testid="session-list" class="flex flex-col overflow-y-auto">
  </nav>
</div>"
`;
